--- a/views/users.jade
+++ b/views/users.jade
@@ -4,7 +4,7 @@ block content
 
     h1 List of the users
 
-    table
+    table(style="text-align: center")
         tr
             td
                 strong Name
