--- a/views/index.jade
+++ b/views/index.jade
@@ -12,4 +12,6 @@ block content
         li
             a(href="/iphone.html") iPhone camera demo
         li
-            a(href="/cross-process.html") Cross-process demo
+            a(href="/coffee") Coffeescript demo
+        li
+            a(href="/cross-process.html") Cross-process demo (working)
