finish the cross process demo. fix #6

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,4 +14,4 @@ block content
         li
             a(href="/coffee") Coffeescript demo
         li
-            a(href="/cross-process.html") Cross-process demo (working)
+            a(href="/cross/") Cross-process demo
