some small tweaks

--- a/views/cross-index.jade
+++ b/views/cross-index.jade
@@ -5,8 +5,8 @@ block content
     p This is a demo project similar to 
         a(href="http://wx.qq.com/" target="_blank") WeChat's web log in interface
         . We wish to demonstrate how different webpages/sessions (potentially one on the desktop and one on the mobile) can communicate with each other, thus to achieve a smoother user experience.
-
     p Click the following link to open a second (pop-up) window, which conceptually should be done on your mobile phone. When you follow the instructions (i.e. click a button) on the pop-up window, which stands for doing some extra interactions on the mobile end, this webpage will prompt the success of log in.
+    p Currently the load of this page will time out in two minutes. But it shouldn't be hard to prevent such timeout.
 
     a(href="/cross/popup" target="_blank") Launch a pop-up window
 
