--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     block head
   body
-    h1 Website title
+    h1 Learn-express Demo Website
     block content
