--- a/views/index.jade
+++ b/views/index.jade
@@ -15,3 +15,5 @@ block content
             a(href="/coffee") Coffeescript demo
         li
             a(href="/cross/") Cross-process demo
+        li
+            a(href="/gist/") Gist demo
