add syntax highlighting to the redis demo. fix #9

--- a/views/gist_get.jade
+++ b/views/gist_get.jade
@@ -1,4 +1,7 @@
 extends layout
 
+block head
+    link(rel='stylesheet' type='text/css' href='/pygmentize.css')
+
 block content
-    p= txt
+    div!= txt
