add a chatroom demo

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,3 +17,5 @@ block content
             a(href="/cross/") Cross-process demo
         li
             a(href="/gist/") Gist demo
+        li
+            a(href='/chat/') Chatroom demo (with socket.io, open two windows to test it)
