--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     block head
-  body
+  body(style='margin:auto')
     h1 Learn-express Demo Website
     block content
